# daves_dashboard

./: .env  Cargo.toml  README.md
src/: controllers.rs  lib.rs  local_system.rs  main.rs  models.rs  routes.rs  templates.rs  views.rs
src/controllers/: sys_info.rs
src/models/: sys_info_model.rs
src/routes/: home.rs  mod.rs
src/views/: sys_info.rs  sys_info_view.rs
templates/: sys_info.html.hbs
