# Dave's Dashboard Browser based system and world dashboard 
# Copyright (C) 2022  Dave Warnock dwarnock@gmail.com

# This file is part of Dave's Dashboard.

# Dave's Dashboard is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as 
# published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.

# Dave's Dashboard is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty 
# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.

# You should have received a copy of the GNU General Public License along with Dave's Dashboard. 
# If not, see <https://www.gnu.org/licenses/>.

[package]
name = "daves_dashboard"
version = "0.1.0"
edition = "2021"
authors = ["Dave Warnock dwarnock@gmail.com"]
license = "GPL3.0"
repository = "GitHub daves_dashboard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["headers", "macros"] }
handlebars = { version = "4.3.5", features = ["dir_source"] }
serde = { version = "1.0.150", features = ["derive"] }
sysinfo = "0.27.0"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
